<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PostActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@drawable/fondo_superior">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/upload"
                android:layout_gravity="center|top"
                app:layout_collapseMode="parallax">
            </ImageView>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tools_filtro"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="6dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="16dp"
            app:cardMaxElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/para_post_titulo"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/azul_oscuro">
                </TextView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reciclyViewPost"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/borde_post"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
                </androidx.recyclerview.widget.RecyclerView>
                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_post_interno"
                    android:hint="@string/para_post_lugar"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/azul_oscuro">
                </EditText>
                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_post_interno"
                    android:hint="@string/para_post_descripcion"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/azul_oscuro">
                </EditText>
                <Spinner
                    android:id="@+id/spinnerCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_post_interno">
                </Spinner>
                <EditText
                    android:id="@+id/etDuracion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_post_interno"
                    android:hint="@string/para_post_duracion"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/azul_oscuro">
                </EditText>
                <EditText
                    android:id="@+id/etPresupuesto"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_post_interno"
                    android:hint="@string/para_post_presupuesto"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/azul_oscuro">
                </EditText>
                <Button
                    android:id="@+id/btmPublicar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/para_post_boton_publicar"
                    android:backgroundTint="@color/azul_oscuro"
                    android:textSize="16sp">
                </Button>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/barra_superior"
            android:scaleType="centerCrop">
        </ImageView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>