<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.PerfilFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@drawable/fondo_superior">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circuloImageView"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_perona_registro"
                    android:layout_marginTop="100dp"
                    android:scaleType="centerCrop"
                    app:civ_circle_background_color="@color/gris_fondo"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="5dp">
                </de.hdodenhof.circleimageview.CircleImageView>
            </FrameLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center|right"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                tools:ignore="RtlHardcoded">
                <TextView
                    android:id="@+id/insta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="normal">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center|left"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/cantPubli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_publicaciones"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publicaciones"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="TextSizeCheck">
                </TextView>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="100dp">
        <TextView
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/azul_oscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center">
        </TextView>
        <TextView
            android:id="@+id/email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/azul_oscuro"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="7dp">
        </TextView>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="20dp">
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/barra_superior"
            android:scaleType="centerCrop"
            android:layout_gravity="end"
            tools:ignore="UnusedAttribute">
        </ImageView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>